--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ bleach==3.1.0
 decorator==4.3.2
 defusedxml==0.5.0
 Django==2.1.7
+django-cors-headers==2.4.1
 django-extensions==2.1.6
 djangorestframework==3.9.1
 djangorestframework-jwt==1.11.0
